objects/Question_Choice__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Choice__c</fullName>
        <label>Answer Choice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Choice_order__c</fullName>
        <label>Choice order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Question Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Question_Type__c.Type__c</field>
                <operation>notEqual</operation>
                <value>Text, TextArea</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Question_Type__c</referenceTo>
        <relationshipLabel>Question Choices</relationshipLabel>
        <relationshipName>Question_Choices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Question Choice</label>
    <nameField>
        <displayFormat>QC-{00000}</displayFormat>
        <label>Question Choice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Choices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Answer_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( (ISPICKVAL(Question_Type__r.Type__c , &apos;Radio&apos;) || 
  ISPICKVAL(Question_Type__r.Type__c , &apos;Checkbox&apos;) ||
  ISPICKVAL(Question_Type__r.Type__c , &apos;Picklist&apos;)),  ISBLANK( Answer_Choice__c ))</errorConditionFormula>
        <errorDisplayField>Answer_Choice__c</errorDisplayField>
        <errorMessage>Answer Choice is required</errorMessage>
    </validationRules>
</CustomObject>